@@ -160,7 +160,7 @@ class RequestsMock:
         response_callback: Optional[Callable[[Any], Any]] = ...,
         passthru_prefixes: Tuple[str, ...] = ...,
         target: str = ...,
-        registry: FirstMatchRegistry = ...
+        registry: Any = ...
     ) -> None: ...
     def reset(self) -> None: ...
     add: _Add
