@@ -1,6 +1,8 @@
 0.15.0
 ------
 
+* Added `responses.registries`. Now user can create custom registries to
+  manipulate the order of responses in the match algorithm
 * Added `responses.PassthroughResponse` and
   `reponses.BaseResponse.passthrough`. These features make building passthrough
   responses more compatible with dynamcially generated response objects.
